SignUp integration test